<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/login_hint"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass_et"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/et"
        app:layout_constraintStart_toStartOf="@+id/et"
        app:layout_constraintTop_toBottomOf="@+id/et" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:elevation="5dp"
        android:onClick="onComponentClick"
        android:background="@drawable/btn_style"
        android:paddingLeft="30dp"
        android:paddingTop="8dp"
        android:paddingRight="30dp"
        android:paddingBottom="8dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_et" />
</androidx.constraintlayout.widget.ConstraintLayout>